--- a/index.html
+++ b/index.html
@@ -1,57 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+---
+title: Benjamin Pearce
+layout: default
+---
 
-    <link href="/css/bootstrap.css" rel="stylesheet">
-    <style>
-      body {
-        padding-top: 60px;
-      }
-    </style>
-    <link href="/css/bootstrap-responsive.css" rel="stylesheet">
-
-    <script type="text/javascript" src="/js/jquery.js"></script>
-    <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
-    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script src="/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="/js/bootstrap.min.js" type="text/javascript"></script>
-    <script src="/js/npm.js" type="text/javascript"></script>
-
-    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#"></a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active"><a href="/">Home</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-
-<div class="row-fluid">
-    <div class="col-xs-8">
-        <h1>Benjamin Pearce</h1>
+<h1>Benjamin Pearce</h1>
 <h2>Ruby Web Projects</h2>
 
 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
@@ -125,22 +77,3 @@
     </div>
   </div>
 </div>
-
-    </div>
-    <div class="col-xs-4">
-        <div class="row">
-  <div class="col-xs-5">
-    <!--<img src="https://avatars2.githubusercontent.com/u/8270674?v=3&s=460" class="img-circle img-responsive">-->
-  </div>
-  <div class="col-xs-7"></div>
-</div>
-<div class="row">
-</div>
-
-    </div>
-</div>
-    </div>
-
-  </body>
-</html>
-
